# shopiwise

./: .gitignore  .vercelignore  LICENSE  README.md  go.mod  package.json  pnpm-lock.yaml  start.sh  vercel.json
.github/workflows/: submit.yml
api/: go.mod  go.sum  intentions.go  main.go
api/intentions/: index.go
apps/backend/: .env.example  Makefile  create-dbs.sql  docker-compose-dev.yml  pgadmin.yml  servers.json
apps/backend/backend/: Dockerfile
apps/backend/backend/app/: pyproject.toml
apps/backend/backend/app/app/: main.py
apps/backend/pgadmin/: servers.json
apps/browser-extension/: .gitignore  README.md  package.json  popup.svelte  tailwind.config.js  tsconfig.json
apps/browser-extension/background/: index.ts
apps/browser-extension/components/: Hoverable.svelte
apps/browser-extension/contents/: AiResponse.svelte
apps/browser-extension/lib/: llm.ts
apps/browser-extension/lib/stores/: aiResponse.ts  content.ts  createStore.ts
apps/browser-extension/lib/utils/: helpers.ts  messaging.ts
apps/browser-extension/pages/: IndexPage.svelte  Popup.svelte
backend/: main.go
browser-extension/: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
browser-extension/background/: index.ts
browser-extension/components/: Hoverable.svelte
browser-extension/contents/: AiResponse.svelte
browser-extension/lib/: llm.ts
browser-extension/lib/stores/: createStore.ts  options.ts
browser-extension/lib/utils/: constants.ts  messaging.ts
browser-extension/pages/: OptionsPage.svelte  Popup.svelte
