[tool.poetry]
name = "app"
version = "0.1.0"
description = "A sample fastapi project created with create-fastapi-project"
authors = [ "Your Name <your@email.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "app"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.0"
ruff = "^0.0.284"
black = "^23.7.0"
pytest-asyncio = "^0.21.1"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39", "py310", "py311",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [ ".git", "__pycache__", ".mypy_cache", ".pytest_cache",]
select = [ "E", "W", "F", "C", "B",]
ignore = [ "B904", "B006", "E501", "B008", "C901",]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [ "alembic", "__pycache__",]

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = {version = "^0.95.2", extras = ["all"]}
fastapi-pagination = {version = "^0.11.4", extras = ["sqlalchemy"]}
asyncer = "^0.0.2"
httpx = "^0.23.1"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
sqlmodel = "^0.0.8"
python-jose = "^3.3.0"
cryptography = "^38.0.3"
passlib = "^1.7.4"
sqlalchemy-utils = "^0.38.3"
sqlalchemy = "^1.4.40"
minio = "^7.1.13"
pillow = "^9.4.0"
watchfiles = "^0.18.1"
pandas = "^1.5.3"
openpyxl = "^3.0.10"
redis = "^4.5.1"
fastapi-async-sqlalchemy = "^0.3.12"
oso = "^0.26.4"
celery = "^5.2.7"
transformers = "^4.28.1"
requests = "^2.29.0"
wheel = "^0.40.0"
setuptools = "^67.7.2"
langchain = "^0.1.6"
openai = "^1.12.0"
celery-sqlalchemy-scheduler = "^0.3.0"
psycopg2-binary = "^2.9.5"
fastapi-limiter = "^0.1.5"
fastapi-cache2 = {version = "^0.2.1", extras = ["redis"]}
tiktoken = "^0.5.1"
pgvector = "^0.2.3"
langchain-openai = "^0.0.6"

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]
